[package]
name = "ctrs"
version = "1.0.1"
authors = ["Damien Stanton <damien.stanton@gmail.com>"]
license = "MIT"
homepage = "https://github.com/damienstanton/ctrs"
repository = "https://github.com/damienstanton/ctrs"
description = "Rust implementations and notes on category theory."
keywords = ["category", "theory", "functional", "haskell", "graph"]