[package]
name = "ctrs"
version = "1.1.1"
edition = "2018"
authors = ["Damien Stanton <damien.stanton@gmail.com>"]
license = "MIT"
repository = "https://github.com/damienstanton/ctrs"
description = "Rust implementations and notes on category theory."
keywords = ["category", "theory", "functional", "haskell", "graph"]
